# bbi-ai-readiness-diagnostic-kit

./: .coverage  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE_DECISION_REQUIRED.md  PUBLIC_PROOF_GATE.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  scorecards.yml
bbi_ai_readiness/: cli.py  reporting.py  scoring.py
docs/: architecture.md  launch-post.md  methodology.md  release-checklist.md
docs/governance/: merge-policy.md  release-policy.md  security-model.md
docs/releases/: v0.1.0.md
examples/: sample-assessment.json
tests/: helpers.py  test_cli.py  test_reporting.py  test_scoring.py
