[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bbi-ai-readiness-diagnostic-kit"
version = "0.1.0"
description = "Evidence-first AI readiness diagnostic toolkit"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Dr. Tatianna Gilliam"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
bbi-ai-readiness = "bbi_ai_readiness.cli:main"

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["bbi_ai_readiness*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
packages = ["bbi_ai_readiness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
